--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.aliyun.com/repository/jcenter" }
     }
 }
 
