--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -29,6 +29,11 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api project(':library')
+    //表单 多样是recyleview
+    /*api 'com.android.support:support-annotations:28.0.0'
+    //noinspection GradleCompatible
+    api 'com.android.support:recyclerview-v7:28.0.0'*/
+   // api 'com.github.gyymz1993:MultiItem:1.0.0'
     api 'org.androidannotations:androidannotations-api:4.2.0'
     //noinspection GradleCompatible
     api 'com.android.support.constraint:constraint-layout:1.1.3'
